visit refactoring + visit specifications + fixed some bugs