@@ -3,6 +3,7 @@ package com.example.demo.mapper;
 import com.example.demo.dto.request.raport.CreateRaportRequest;
 import com.example.demo.dto.request.raport.UpdateRaportRequest;
 import com.example.demo.dto.response.RaportResponse;
+import com.example.demo.enums.VisitStatus;
 import com.example.demo.model.Doctor;
 import com.example.demo.model.Patient;
 import com.example.demo.model.Raport;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class RaportMapper {
@@ -27,16 +27,18 @@ public class RaportMapper {
                 .doctorId(raport.getDoctor().getId())
                 .patientId(raport.getPatient().getId())
                 .visitId(raport.getVisit().getId())
+                .visitStatus(raport.getVisitStatus().name())
+                .appointmentTime(raport.getVisit().getAppointmentTime())
                 .build();
     }
 
     public List<RaportResponse> toResponseList(List<Raport> raports) {
         return raports.stream()
                 .map(this::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public Raport fromCreateRequest(CreateRaportRequest request, Doctor doctor, Patient patient, Visit visit) {
+    public Raport toEntity(CreateRaportRequest request, Doctor doctor, Patient patient, Visit visit) {
         return Raport.builder()
                 .doctor(doctor)
                 .patient(patient)
@@ -46,18 +48,24 @@ public class RaportMapper {
                 .price(request.getPrice())
                 .notes(request.getNotes())
                 .createdAt(LocalDateTime.now())
+                .visitStatus(VisitStatus.valueOf(request.getVisitStatus()))
                 .build();
     }
 
-    public Raport fromUpdateRequest(Raport raport, UpdateRaportRequest request, Doctor doctor, Patient patient, Visit visit) {
+    public Raport updateEntity(Raport raport, UpdateRaportRequest request, Doctor doctor, Patient patient, Visit visit) {
         raport.setDoctor(doctor);
         raport.setPatient(patient);
         raport.setVisit(visit);
-        raport.setDisease(request.getDisease());
-        raport.setSymptoms(request.getSymptoms());
-        raport.setPrice(request.getPrice());
-        raport.setNotes(request.getNotes());
-        // createdAt не змінюємо при оновленні
+        if (request.getDisease() != null)
+            raport.setDisease(request.getDisease());
+        if (request.getSymptoms() != null)
+            raport.setSymptoms(request.getSymptoms());
+        if (request.getPrice() != null)
+            raport.setPrice(request.getPrice());
+        if (request.getNotes() != null)
+            raport.setNotes(request.getNotes());
+        if (request.getVisitStatus() != null)
+            raport.setVisitStatus(VisitStatus.valueOf(request.getVisitStatus()));
         return raport;
     }
 }
